# 01-python-intro

./: .gitignore  exercise_functions.py  main.py  pyproject.toml  u3.2.py  u4.1.py  u4.3.py
veckouppgift_1/: u2.py  u3.1.py  u3.2.py  u4.1.py  u4.2.py
veckouppgift_2/: u1-diskuterra.py  u2-balder.py  u3-sportresultat.py  u4-temperaturomvandling.py  u5-miniräknare.py
veckouppgift_3/: u1-diskuterra.py  u2-loopar-listor-3.py  u2-loopar-listor.py  u3-kvittouträknaren.py  u4-figurer-med-loopar.py
veckouppgift_4/: u1-diskuterra.py  u2_funktioner_och_moduler.py  u3_spelet21.py  u4_pokerhand.py  u5_recursive.py  u5_turtle_graphics.py
veckouppgift_5/: test_u1_read_and_understand.py  test_u2_count_words.py  test_u2_find_median.py  test_u2_is_sorted_ascending.py  test_u2_temperature_converter.py  test_u3_autocomplete_list.py  test_u4_multiplication_table.py  test_u5_balance_lists.py  u2_functions.py  u3_autocomplete_list.py  u4_multiplication_table.py  u5_balance_lists.py
veckouppgift_6/: test_u3_bank.py  u1_1_SafeStorage.py  u1_2_animal.py  u2_countries.py  u3_bank.py
